--- a/src/pages/MainPage/mainPage.module.scss
+++ b/src/pages/MainPage/mainPage.module.scss
@@ -1,12 +1,13 @@
 .search {
   flex: 1;
+  width: min(600px, 90dvw);
 }
 
 .input {
-  width: 300px;
+  width: auto;
   min-width: 150px;
   max-width: 400px;
-  margin: 10px 150px;
+  margin: 10px auto;
 
   & > * {
     text-align: center !important;
@@ -14,6 +15,10 @@
     padding: 14px;
     font-size: 18px !important;
   }
+}
+
+.componentSearch {
+  display: flex;
 }
 
 .list {
