--- a/src/pages/MainPage/mainPage.module.scss
+++ b/src/pages/MainPage/mainPage.module.scss
@@ -27,7 +27,7 @@
   gap: 24px;
   flex: 1;
   margin: 10px 0;
-  max-height: 100vh;
+  max-height: calc(100vh - 24dvh);
   overflow: auto;
   padding: 15px;
   border: 1px solid #eee;
