full adaptive ready

--- a/src/component/Track/track.module.scss
+++ b/src/component/Track/track.module.scss
@@ -33,3 +33,15 @@
 .playing * {
   color: #9340fe !important;
 }
+
+@media screen and (width < 401px) {
+  .track {
+    font-size: 0.85em;
+  }
+}
+
+@media screen and (width < 350px) {
+  .track {
+    gap: 10px !important;
+  }
+}
