--- a/src/component/Playbar/playbar.module.scss
+++ b/src/component/Playbar/playbar.module.scss
@@ -1,8 +1,26 @@
 
-  @media screen and (width < 635px) {
+  @media screen and (width < 685px) {
     .playbar {
       font-size: 0.8em;
-      padding: 20px;
+      padding: 0 20px !important;
+      width: calc(100% - 40px) !important;
+      gap: 10px !important;
+    }
+  }
+
+  @media(width < 400px) {
+    .playbar {
+      padding: 0 7px !important;
+      font-size: 0.75em;
+      width: calc(100% - 14px) !important;
+      gap: 2px !important;
+
+      & > p {
+        font-size: 0.6em;
+      }
+    }
+    .slider{
+      gap: 10px !important;
     }
   }
 
@@ -21,6 +39,7 @@
     align-items: center;
     padding: 0 40px;
     gap: 30px;
+    min-width: 285px;
   
     & .togglePlay {
       transform: scale(120%) !important;
@@ -60,3 +79,11 @@
     flex-basis: 600px;
     margin-left: auto;
   }
+
+  // .sound{
+  //   display: flex;
+  //   align-items: center;
+  //   flex-basis: 600px;
+  //   margin-left: auto;
+  //   width: 300px !important;
+  // }
