--- a/src/global.module.scss
+++ b/src/global.module.scss
@@ -12,6 +12,7 @@
   display: flex;
   padding: 10px;
   gap: 60px;
-  width: min(40dvw, 90dvw);
+  width: min(600px, 90dvw);
   margin: auto;
+  min-width: 285px;
 }
