--- a/src/pages/MainPage/mainPage.module.scss
+++ b/src/pages/MainPage/mainPage.module.scss
@@ -1,13 +1,14 @@
 .search {
   flex: 1;
-  width: min(600px, 90dvw);
 }
 
 .input {
   width: auto;
-  min-width: 150px;
-  max-width: 400px;
+  width: min(350px, 60dvw);
+  min-width: 175px !important;
+  max-width: 350px;
   margin: 10px auto;
+  
 
   & > * {
     text-align: center !important;
