change list max-height

--- a/src/pages/MainPage/mainPage.module.scss
+++ b/src/pages/MainPage/mainPage.module.scss
@@ -28,7 +28,7 @@
   gap: 24px;
   flex: 1;
   margin: 10px 0;
-  max-height: calc(100vh - 24dvh);
+  max-height: calc(100dvh - 28dvh);
   overflow: auto;
   padding: 15px;
   border: 1px solid #eee;
